--- a/common.ru.po
+++ b/common.ru.po
@@ -28,7 +28,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-12 16:09+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Темак, 2024\n"
+"Last-Translator: Andrei Stepanov, 2014-2024\n"
 "Language-Team: Russian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -165,11 +165,11 @@ msgstr "сведения о сервере"
 #: qcsrc/client/hud/panel/infomessages.qc:134
 #, c-format
 msgid "^2You're queued to join the %s%s^2 team"
-msgstr "^2Вы поставлены в очередь для присоединения к команде %s%s"
+msgstr "^2Вы помещены в очередь для присоединения к команде %s%s^2"
 
 #: qcsrc/client/hud/panel/infomessages.qc:137
 msgid "^2You're queued to join any available team"
-msgstr ""
+msgstr "^2Вы помещены в очередь для присоединения к любой доступной команде"
 
 #: qcsrc/client/hud/panel/infomessages.qc:139
 #, c-format
@@ -221,7 +221,7 @@ msgstr "^2Для завершения разминки — ^3%s^2"
 
 #: qcsrc/client/hud/panel/infomessages.qc:202
 msgid "Teams are unbalanced!"
-msgstr ""
+msgstr "Команды не равны!"
 
 #: qcsrc/client/hud/panel/infomessages.qc:205
 #, c-format
@@ -1184,11 +1184,11 @@ msgstr "Разминка"
 
 #: qcsrc/client/hud/panel/timer.qc:131
 msgid "Warmup: too few players!"
-msgstr ""
+msgstr "Разминка: слишком мало игроков!"
 
 #: qcsrc/client/hud/panel/timer.qc:133
 msgid "Warmup: teams unbalanced!"
-msgstr ""
+msgstr "Разминка: команды не равны!"
 
 #: qcsrc/client/hud/panel/timer.qc:135
 msgid "Warmup: no time limit"
@@ -2706,7 +2706,7 @@ msgstr "^F4Отсчёт остановлен!"
 #: qcsrc/common/notifications/all.inc:275
 #: qcsrc/common/notifications/all.inc:560
 msgid "Teams are too unbalanced."
-msgstr ""
+msgstr "Команды крайне не равны!"
 
 #: qcsrc/common/notifications/all.inc:277
 #, c-format
